--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "express": "^4.16.3",
     "hbs": "^4.0.1",
     "snoowrap": "^1.15.2"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1"
   }
 }
