--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "9.2.x"
+  },
   "dependencies": {
     "express": "^4.16.3",
     "hbs": "^4.0.1",
