--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js -e hbs"
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+      "node": "9.2.x",
+      "npm": "5.8.x"
+   },
   "dependencies": {
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
